# rdwm

./: .gitignore  Cargo.toml  LICENSE  README.md  run.sh
lib/: c2rust-lib.rs  drw.rs  dwm.rs  util.rs
src/: config.rs  config.toml  drw.rs  main.rs  rdwm.rs  util.rs
src/dwm/: cmds.sh  compile_commands.json  types_c.taghl
