[package]
name = "rdwm"
version = "0.0.1"
authors = ["Evan Harvey"]
publish = false
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7.1"
x11 = "2.18.1"
libc = "0.2.28"
lazy_static = "1.4.0"
bitflags = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_test = "1.0.104"
toml = "0.5"
